...
1. Grip a pull-up bar with your palms facing away from you and hands slightly wider than shoulder-width apart.
2. Hang with your arms fully extended and legs off the ground.
3. Engage your core and pull your body upward until your chin is above the bar.
4. Lower yourself back down slowly and under control to the starting position.
**Tips:** If you're unable to perform a full pull-up, use an assisted pull-up machine or resistance bands to help support your weight.
""", difficulty: "Intermediate", caloriesPerRep: 0.5),
            Exercise(imageName: "Push-Up", detailedImageName: "Push-Up-1", name: "PUSH-UPS", description: """
Push-Up is a fundamental bodyweight exercise that targets the chest, shoulders, triceps, and core muscles to build upper body strength and improve muscular endurance.
**How to Perform:**
1. Start in a high plank position with your hands placed slightly wider than shoulder-width apart.
2. Keep your body in a straight line from head to heels, engaging your core.
3. Lower your body by bending your elbows until your chest nearly touches the floor.
4. Push back up to the starting position, fully extending your arms.
...
                }
                .padding(.top, screenHeight * 0.02)

            }
            //.edgesIgnoringSafeArea(.all)
            .navigationBarBackButtonHidden(true)
            .accessibilityIdentifier("MenuScreenContainer")

        }
    }
}

struct Exercise: Identifiable {
...
